--- a/chinatown.html
+++ b/chinatown.html
@@ -26,7 +26,7 @@
                 <img class="restaurant-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
             </figure>
         </div>
-        <div class="to-restaurant-video"> <video width="50%" height="auto" controls muted>
+        <div class="to-restaurant-video"> <video width="40%" height="auto" controls muted>
             <source src="assets/asian garden video.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video> <p class="video-description">en-route to asian garden</p></div>
@@ -37,14 +37,19 @@
         <h2> Asian Garden is a seafood restaurant on 28 Harrison Ave in Boston’s Chinatown. </h2>
         <h2> Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines.</h2>
         <p> When I walked inside Asian Garden on a late Friday afternoon, I saw people eating late lunches and early dinners around round tables. Colorful dividers were placed between tables to promote social distancing. A Chinese drama blared from a small, propped television. The bell notifying incoming customers enter would occasionally ring. </p>
-        <img class="inside1" src="assets/inside of restaurant.png">
+        <figure>
+            <img class="inside1" src="assets/inside of restaurant.png"> 
+            <figcaption> inside of asian garden </figcaption>
+        </figure>
         <p> However, business was still stagnant and it was clear that the small family-owned restaurant was struggling to keep up against the brunt of the pandemic and the increasing rise of Asian hate crimes. </p>
     </div> 
     <div class="profile">
      <h3> About the Business Owner </h3>
      <img class="agowner" src="assets/ownerkawa.png" alt="picture of business owner kawa">
+     <img class="star-ag" src="assets/icons8-star-96.png"> 
+     <img class="star-ag2" src="assets/icons8-star-96.png">
      <p> The owner's name of Asian Garden is Ka Wa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
-     <p> When I asked him why he started his restaurant, he responded <span>“Because it is my passion”</span>.</p>
+     <p> When I asked him why he started his restaurant, he responded <span>“Because cooking is my passion”</span>.</p>
      <p> During our phone interview, he kindly shared his experiences with me. Occasionally, he would call out an order for the kitchen to take. I could tell he was a busy man who worked extremely hard. </p>
     </div>
     <div class="impact">
@@ -57,8 +62,8 @@
          <h4><i>Stop Asian Hate</i> Reported Nearly 3,800 Incidences of Hate Crimes.</h4> 
          <h4>Hate Crimes Are Largely Undercounted Due To Language Barriers, Mistrust with Authorities, and Reluctancy to Speak Up.</h4>
     </div>
-     <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely fail to pick it up, which resulted in wasted food and expenses.</p>
-     <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year and all the windows would be smashed. </p>
+     <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely refuse to pick it up, which resulted in wasted food and expenses.</p>
+     <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year. Despite installing security systems, he would come back to smashed restaurant windows. </p>
     </div> 
     <div class="support"> 
      <h2>Here's How You Can Help</h2>
@@ -66,7 +71,7 @@
          <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Support</a> </button> Asian Garden in Chinatown. Click the button to get access to the menu and for takeout options. </li>
              <figure>  
                  <img class="takeout" src="assets/IMG_3527 2.png">
-                 <figcaption class="ag-take-out-caption"> Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
+                 <figcaption class="take-out-caption"> Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
                  <img class="takeout-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
              </figure>
          <li><button class="support-AG"> <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button> to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. Click the button to donate. </li>
