--- a/eastboston.html
+++ b/eastboston.html
@@ -46,6 +46,8 @@
         <div class="profile">
          <h3> About the Business Owner </h3>
          <img class="agowner" src="assets/maria-balbin.png" alt="picture of business owner maria balbin">
+         <img class="star-ag" src="assets/icons8-star-96.png"> 
+         <img class="star-ag2" src="assets/icons8-star-96.png"> 
          <p> It all started when Marina Balbin left Colombia about 35 years ago to come for the “American Dream” she first arrived in NYC, but that didn’t work. She then arrived  to Boston in 1998 where she got an opportunity to start her business, which is now El Peñol Resturante authentic Colombian cuisine.</p>
         </div>
         <div class="impact">
@@ -69,7 +71,8 @@
             <li><button class="support-AG"> <a href="http://www.elpenolrestaurante.com">Support</a> </button> El Penol in East Boston. Click the button to get access to the menu and for takeout options. </li>
             <figure>  
                 <img class="takeout" src="assets/117108314_2579134242189444_2235551365629470503_n.png">
-                <figcaption>The famous Bandejo Penol</figcaption>
+                <figcaption class="take-out-caption">The famous Bandejo Penol</figcaption>
+                <img class="takeout-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
             </figure>
             <li><button class="support-AG"> <a href="https://hispanicstar.org/donate/">Donate</a> </button> to the Hispanic Star Relief Fund. Funds will be distributed to Latinx community members and small businesses around the country in need. Click the button to donate. </li>
             <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Share</a> </button> the word. Click the button to share this website on your social media. </li>
