changes to media query

--- a/chinatown.html
+++ b/chinatown.html
@@ -15,10 +15,10 @@
                 <li><a class="nav-links" href="aboutus.html">About Us</a></li>
             </ul>
         </nav>
-        <div class="ag-name">
+        <div class="name">
             <h1>Asian Garden Restaurant</h1>
         </div>
-        <div class="ag-address">
+        <div class="address">
             <h1>28 Harrison Ave, Boston, MA 02111-2025</h1>
             <figure>
                 <img class="eb-restaurant-image" src="assets/asian garden restaurant.png"> 
@@ -39,13 +39,13 @@
         <p> When I walked inside Asian Garden on a late Friday afternoon, I saw people eating late lunches and early dinners around round tables. Colorful dividers were placed between tables to promote social distancing. A Chinese drama blared from a small, propped television. The bell notifying incoming customers enter would occasionally ring. </p>
         <figure>
             <img class="inside1" src="assets/inside of restaurant.png"> 
-            <figcaption> inside of asian garden </figcaption>
+            <figcaption class="inside-caption"> inside of asian garden </figcaption>
         </figure>
         <p> However, business was still stagnant and it was clear that the small family-owned restaurant was struggling to keep up against the brunt of the pandemic and the increasing rise of Asian hate crimes. </p>
     </div> 
     <div class="profile">
      <h3> About the Business Owner </h3>
-     <img class="agowner" src="assets/ownerkawa.png" alt="picture of business owner kawa">
+     <img class="owner" src="assets/ownerkawa.png" alt="picture of business owner kawa">
      <img class="star-ag" src="assets/icons8-star-96.png"> 
      <img class="star-ag2" src="assets/icons8-star-96.png">
      <p> The owner's name of Asian Garden is Ka Wa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
