--- a/eastboston.html
+++ b/eastboston.html
@@ -15,10 +15,10 @@
                 <li><a class="nav-links" href="aboutus.html">About Us</a></li>
             </ul>
         </nav>
-        <div class="ag-name">
+        <div class="name">
             <h1>El Penol Restaurant</h1>
         </div>
-        <div class="ag-address">
+        <div class="address">
             <h1>54 Bennington Street Boston, Massachusetts,  02128</h1>
             <figure>
                 <img class="restaurant-image" src="assets/el peno edit 1.png"> 
@@ -45,7 +45,7 @@
         </div> 
         <div class="profile">
          <h3> About the Business Owner </h3>
-         <img class="agowner" src="assets/maria-balbin.png" alt="picture of business owner maria balbin">
+         <img class="owner" src="assets/maria-balbin.png" alt="picture of business owner maria balbin">
          <img class="star-ag" src="assets/icons8-star-96.png"> 
          <img class="star-ag2" src="assets/icons8-star-96.png"> 
          <p> It all started when Marina Balbin left Colombia about 35 years ago to come for the “American Dream” she first arrived in NYC, but that didn’t work. She then arrived  to Boston in 1998 where she got an opportunity to start her business, which is now El Peñol Resturante authentic Colombian cuisine.</p>
