changes to index

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     </ul>
   </nav>
         <div class="container">
-            <h1 class="front-page-header"> The <span>Impact of COVID-19</span> on Boston Minority Businesses </h1>
+            <h1 class="front-page-header"> The <span>Impact of COVID19</span> on Boston Minority Businesses </h1>
             <img class="header-image" src="assets/adam-niescioruk-Z9arfr0f248-unsplash.jpg"> 
             <div class="foo"></div>
         </div>
     </header>  
     <main>
         <div class="introduction"> 
-            <h1> The COVID-19 pandemic has affected everyone, but <i>not equally</i>.</h1>
+            <h2> The COVID-19 pandemic has affected everyone, but <i>not equally</i>.</h2>
+            <div class="foo4"> </div>
         </div>
         <div class="overview-part-1">
             <p> The pandemic amplified a huge gap between white and minority communities including access to food, economic resources, job opportunities, and education. Because communities of color face more economic insecurity and often work service jobs, they face a greater risk of exposure to the virus, and thus are disproportionately affected by COVID-19. </p>
@@ -65,7 +66,7 @@
                 <p> Our goal is to focus on small businesses of color, many of whom financially struggle to maintain their business and face increasing uncertainty about reopening and going back to “normal.” </p>
                 <p> This website aims to promote dialogue about the disproportionate impacts of COVID-19 on minority businesses. The goal is to spread awareness about local business in the Boston and the greater Boston area and help support their businesses.  </p>
                 <div class="foo3"></div>
-                <blockquote> <img class="quotemark" src="assets/icons8-get-quote-96.png">
+                <blockquote> <img class="quotemark" src="assets/icons8-quote-left-100.png">
                     The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families. <br> <cite> -Suzanne P. Clark, president of the U.S. Chamber</cite>
                 </blockquote>
             </div>
