--- a/chinatown.html
+++ b/chinatown.html
@@ -21,7 +21,7 @@
         <div class="address">
             <h1>28 Harrison Ave, Boston, MA 02111-2025</h1>
             <figure>
-                <img class="eb-restaurant-image" src="assets/asian garden restaurant.png"> 
+                <img class="eb-restaurant-image" src="assets/asian garden full rest..png"> 
                 <figcaption class="eb-rest-image-caption"> the front of the store</figcaption>
                 <img class="restaurant-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
             </figure>
@@ -58,6 +58,7 @@
      <p> Although the state government provided funding to keep workers in local businesses employed through the Paycheck Protection Program (PPP), there was still not enough business to hire workers back. </p>
      <p>KaWa believes that the rise of hate crimes against Asian-Americans due to broader rhetoric about Asian-Americans being responsible for carrying the disease has contributed to the loss in revenue. </p> 
      <div class="poc-statistics"> 
+         <div class="foo5"></div>
          <h4> Reported Asian Hate Crimes Rose to <span>150%</span> in 2020 </h4> 
          <h4><i>Stop Asian Hate</i> Reported Nearly 3,800 Incidences of Hate Crimes.</h4> 
          <h4>Hate Crimes Are Largely Undercounted Due To Language Barriers, Mistrust with Authorities, and Reluctancy to Speak Up.</h4>
