--- a/eastboston.html
+++ b/eastboston.html
@@ -56,6 +56,7 @@
          <p>El Penol shut their business down for 3 week to adhere to the safety of their employees, families, friends, and the city of Boston. To adjust to the “new norm,” El Pelon requires facemasks, table distancing, hand sanitizer around the dining areas, and social distancing. </p>
          <p>People were <span>scared </span>and <span>afraid </span>to come out of their houses. The Latinx community carries more essential jobs and they need to work, they can’t depend on not working. They need to find their own way of living to keep food on the table for their families</p>
          <div class="poc-statistics"> 
+            <div class="foo5"></div>
             <h4> Latinx Are Hospitalized From COVID-19 4x More Than White People</h4> 
             <h4> 26% of COVID-19 Deaths are Latinx </h4>
             <h4> 50% of the Essential Workforce are Latinx </h4> 
