--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </header>  
     <main>
-        <div class="introduction"> 
+        <div class="homepage-introduction"> 
             <h2> The COVID-19 pandemic has affected everyone, but <i>not equally</i>.</h2>
             <div class="foo4"> </div>
         </div>
