--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,9 @@
             <ul>
                 <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
                 <li><a class="nav-links" href="aboutus.html">About Us</a></li>
-            </ul>
+                <li><a class="nav-links restaurant-link" href="eastboston.html">El Penol</a></li>
+                <li><a class="nav-links restaurant-link" href="chinatown.html">Asian Garden</a></li>
+              </ul>
         </nav>
         <h1 class="about-us">About Us</h1>
         <div class="block2"> </div>
