--- a/chinatown.html
+++ b/chinatown.html
@@ -11,9 +11,11 @@
     <header>
         <nav>
             <ul>
-                <li><a class="nav-links" href="index.html">Centering Communities During COVID</a><strong></strong></li>
+                <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
                 <li><a class="nav-links" href="aboutus.html">About Us</a></li>
-            </ul>
+                <li><a class="nav-links restaurant-link" href="eastboston.html">El Penol</a></li>
+                <li><a class="nav-links restaurant-link" href="chinatown.html">Asian Garden</a></li>
+              </ul>
         </nav>
         <div class="name">
             <h1>Asian Garden Restaurant</h1>
