--- a/eastboston.html
+++ b/eastboston.html
@@ -13,7 +13,9 @@
             <ul>
                 <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
                 <li><a class="nav-links" href="aboutus.html">About Us</a></li>
-            </ul>
+                <li><a class="nav-links restaurant-link" href="eastboston.html">El Penol</a></li>
+                <li><a class="nav-links restaurant-link" href="chinatown.html">Asian Garden</a></li>
+              </ul>
         </nav>
         <div class="name">
             <h1>El Penol Restaurant</h1>
