--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <body>  
     <header>
         <nav>
-    <ul>
-      <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
-      <li><a class="nav-links" href="aboutus.html">About Us</a></li>
-    </ul>
+        <ul>
+            <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
+            <li><a class="nav-links" href="aboutus.html">About Us</a></li>
+            <li><a class="nav-links restaurant-link" href="eastboston.html">El Penol</a></li>
+            <li><a class="nav-links restaurant-link" href="chinatown.html">Asian Garden</a></li>
+        </ul>
   </nav>
         <div class="container">
             <h1 class="front-page-header"> The <span>Impact of COVID19</span> on Boston Minority Businesses </h1>
