added statistic to east boston

--- a/eastboston.html
+++ b/eastboston.html
@@ -60,6 +60,7 @@
          <div class="poc-statistics"> 
             <div class="foo5"></div>
             <h4> Latinx Are Hospitalized From COVID-19 4x More Than White People</h4> 
+            <h4> In April 2020, Boston's MGH Hospital Reported 35-40% of COVID Patients were Latinx</h4>
             <h4> 26% of COVID-19 Deaths are Latinx </h4>
             <h4> 50% of the Essential Workforce are Latinx </h4> 
        </div>
