--- a/eastboston.html
+++ b/eastboston.html
@@ -23,7 +23,7 @@
         <div class="address">
             <h1>54 Bennington Street Boston, Massachusetts,  02128</h1>
             <figure>
-                <img class="restaurant-image" src="assets/el peno edit 1.png"> 
+                <img class="restaurant-image" src="assets/el penol restaurant.png"> 
                 <figcaption class="rest-image-caption"> the front of the store</figcaption>
                 <img class="restaurant-arrow" src="assets/icons8-forward-arrow-64.png"/>
             </figure>
