--- a/eastboston.html
+++ b/eastboston.html
@@ -28,7 +28,7 @@
                 <img class="restaurant-arrow" src="assets/icons8-forward-arrow-64.png"/>
             </figure>
         </div>
-        <div class="to-restaurant-video"> <video width="50%" height="auto" controls muted>
+        <div class="to-restaurant-video"> <video width="40%" height="auto" controls muted>
             <source src="assets/walking to el polon.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video> <p class="video-description">en-route to el pelon</p>
@@ -59,10 +59,10 @@
          <p>People were <span>scared </span>and <span>afraid </span>to come out of their houses. The Latinx community carries more essential jobs and they need to work, they can’t depend on not working. They need to find their own way of living to keep food on the table for their families</p>
          <div class="poc-statistics"> 
             <div class="foo5"></div>
-            <h4> Latinx Are Hospitalized From COVID-19 4x More Than White People</h4> 
-            <h4> In April 2020, Boston's MGH Hospital Reported 35-40% of COVID Patients were Latinx</h4>
-            <h4> 26% of COVID-19 Deaths are Latinx </h4>
-            <h4> 50% of the Essential Workforce are Latinx </h4> 
+            <h4> Latinx are hospitalized from COVID-19 4x more than White people</h4> 
+            <h4> In April 2020, Boston's MGH hospital reported 35-40% of COVID patients were Latinx</h4>
+            <h4> 26% of COVID-19 deaths are Latinx </h4>
+            <h4> 50% of the essential workforce are Latinx </h4> 
        </div>
          <p>El Penol quickly closed down their restaurant to ensure everyone’s safety, especially since Marina was working 7 days every week.</p>
          <p>It was hard on everyone, and Johan saw it first-hand when they only talked to his grandmother through the phone. Thankfully, El Penol was and still is busy throughout the whole pandemic. </p>
