--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="styles/style.css">
     <script href="scripts/script.js" defer></script>
-    <title></title>
+    <title>Centering Communities During COVID-19</title>
 </head>
 
   <body>  
     <header>
         <nav>
         <ul>
-            <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
+            <li><a class="nav-links centering-com" href="index.html">Centering Communities During COVID</a></li>
             <li><a class="nav-links" href="aboutus.html">About Us</a></li>
             <li><a class="nav-links restaurant-link" href="eastboston.html">El Penol</a></li>
             <li><a class="nav-links restaurant-link" href="chinatown.html">Asian Garden</a></li>
         </ul>
   </nav>
         <div class="container">
-            <h1 class="front-page-header"> The <span>Impact of COVID19</span> on Boston Minority Businesses </h1>
+            <h1 class="front-page-header"> The <span class="header-span">Impact of COVID19</span> on Boston Minority Businesses </h1>
             <img class="header-image" src="assets/adam-niescioruk-Z9arfr0f248-unsplash.jpg"> 
             <div class="foo"></div>
         </div>
@@ -77,8 +77,8 @@
         <div class="cta-section"> 
             <h3> Learn More About the Local Businesses in Boston</h3>
             <div class="cta"> 
-                <button class="chinatown-button"> <a href="chinatown.html">Asian Garden in Chinatown</a> </button>
-                <button class="revere-button"> <a href="eastboston.html">El Penol in East Boston</a> </button>
+                <button class="chinatown-button"> <a class="bottom-cta" href="chinatown.html">Asian Garden in Chinatown</a> </button>
+                <button class="revere-button"> <a class="bottom-cta" href="eastboston.html">El Penol in East Boston</a> </button>
             </div>
         </div>
     </main>
