changes to buttons

--- a/eastboston.html
+++ b/eastboston.html
@@ -48,8 +48,8 @@
         <div class="profile">
          <h3> About the Business Owner </h3>
          <img class="owner" src="assets/maria-balbin.png" alt="picture of business owner maria balbin">
-         <img class="star-ag" src="assets/icons8-star-96.png"> 
-         <img class="star-ag2" src="assets/icons8-star-96.png"> 
+         <img class="star-ag" src="assets/icons8-star-96.png" alt="star decoration around maria"> 
+         <img class="star-ag2" src="assets/icons8-star-96.png" alt="star decoration around maria"> 
          <p> It all started when Marina Balbin left Colombia about 35 years ago to come for the “American Dream” she first arrived in NYC, but that didn’t work. She then arrived  to Boston in 1998 where she got an opportunity to start her business, which is now El Peñol Resturante authentic Colombian cuisine.</p>
         </div>
         <div class="impact">
@@ -72,17 +72,21 @@
         <div class="support"> 
          <h3>Here's How You Can Help</h3>
          <ul>
-            <li><button class="support-AG"> <a href="http://www.elpenolrestaurante.com">Support</a> </button> El Penol in East Boston. Click the button to get access to the menu and for takeout options. </li>
+            <li>Get your next meal at El Penol in East Boston. </li>
+            <button class="support-AG"> <a class="support-button" href="http://www.elpenolrestaurante.com">Support</a> </button> 
             <figure>  
-                <img class="takeout" src="assets/117108314_2579134242189444_2235551365629470503_n.png">
+                <img class="takeout" src="assets/117108314_2579134242189444_2235551365629470503_n.png" alt="picture of the bendjo penol plate">
                 <figcaption class="take-out-caption">The famous Bandejo Penol</figcaption>
                 <img class="takeout-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
             </figure>
-            <li><button class="support-AG"> <a href="https://hispanicstar.org/donate/">Donate</a> </button> to the Hispanic Star Relief Fund. Funds will be distributed to Latinx community members and small businesses around the country in need. Click the button to donate. </li>
-            <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Share</a> </button> the word. Click the button to share this website on your social media. </li>
+            <li>Donate to the Hispanic Star Relief Fund. Funds will be distributed to Latinx community members and small businesses around the country in need. Click the button to donate. </li>
+            <button class="support-AG"> <a class="support-button" href="https://hispanicstar.org/donate/">Donate</a> </button> 
+            <li>Spread the word. Share this website on your social media. </li>
+            <button class="support-AG"> <a class="support-button" href="https://www.asiangardenboston.com/">Share</a> </button> 
             <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&width=77&height=28&appId" width="77" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&width=77&height=28&appId" width="77" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-            <li><button class="support-AG"> <a href="chinatown.html"> Learn </a> </a> </button> more about other local minority businesses. Click the button to read about Asian Garden, a Chinese restaurant in Chinatown. </li>
+            <li>Learn more about other local minority businesses. Read about Asian Garden, a Chinese restaurant in Chinatown. </li>
+            <button class="support-AG"> <a class="support-button" href="chinatown.html"> Learn </a> </a> </button> 
          </ul>
         
         </div>
