--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </nav>
         <div class="container">
             <h1 class="front-page-header"> The <span class="header-span">Impact of COVID19</span> on Boston Minority Businesses </h1>
-            <img class="header-image" src="assets/adam-niescioruk-Z9arfr0f248-unsplash.jpg"> 
+            <img class="header-image" src="assets/adam-niescioruk-Z9arfr0f248-unsplash.jpg" alt="graffiti of mask with word 'covid-19'>  
             <div class="foo"></div>
         </div>
     </header>  
