--- a/chinatown.html
+++ b/chinatown.html
@@ -23,7 +23,7 @@
         <div class="address">
             <h1>28 Harrison Ave, Boston, MA 02111-2025</h1>
             <figure>
-                <img class="eb-restaurant-image" src="assets/asian garden full rest..png"> 
+                <img class="eb-restaurant-image" src="assets/asian garden full rest..png" alt="outside of the restaurant, showing neon open sign"> 
                 <figcaption class="eb-rest-image-caption"> the front of the store</figcaption>
                 <img class="restaurant-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
             </figure>
@@ -40,7 +40,7 @@
         <h2> Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines.</h2>
         <p> When I walked inside Asian Garden on a late Friday afternoon, I saw people eating late lunches and early dinners around round tables. Colorful dividers were placed between tables to promote social distancing. A Chinese drama blared from a small, propped television. The bell notifying incoming customers enter would occasionally ring. </p>
         <figure>
-            <img class="inside1" src="assets/inside of restaurant.png"> 
+            <img class="inside1" src="assets/inside of restaurant.png" alt="inside of the restaurant with dividers"> 
             <figcaption class="inside-caption"> inside of asian garden </figcaption>
         </figure>
         <p> However, business was still stagnant and it was clear that the small family-owned restaurant was struggling to keep up against the brunt of the pandemic and the increasing rise of Asian hate crimes. </p>
@@ -55,7 +55,7 @@
      <p> During our phone interview, he kindly shared his experiences with me. Occasionally, he would call out an order for the kitchen to take. I could tell he was a busy man who worked extremely hard. </p>
     </div>
     <div class="impact">
-     <h2> Struggling with Multiple Pandemics </h2>
+     <h3> Struggling with Multiple Pandemics </h3>
      <p> During our phone interview, KaWa noted that there was a <span>50%</span> decrease in business due to the pandemic</p>
      <p> Although the state government provided funding to keep workers in local businesses employed through the Paycheck Protection Program (PPP), there was still not enough business to hire workers back. </p>
      <p>KaWa believes that the rise of hate crimes against Asian-Americans due to broader rhetoric about Asian-Americans being responsible for carrying the disease has contributed to the loss in revenue. </p> 
@@ -69,17 +69,21 @@
      <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year. Despite installing security systems, he would come back to smashed restaurant windows. </p>
     </div> 
     <div class="support"> 
-     <h2>Here's How You Can Help</h2>
+     <h3>Here's How You Can Help</h3>
      <ul>
-         <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Support</a> </button> Asian Garden in Chinatown. Click the button to get access to the menu and for takeout options. </li>
+         <li>Get your next meal from Asian Garden. Browse their menu and order online or dine-in. </li>
+         <button class="support-AG"> <a class="support-button" href="https://www.asiangardenboston.com/">Support</a> </button>
              <figure>  
-                 <img class="takeout" src="assets/IMG_3527 2.png">
+                 <img class="takeout" src="assets/IMG_3527 2.png" alt="picture of walnut shrimp and stir fry beef with pepper takeout">
                  <figcaption class="take-out-caption"> Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
                  <img class="takeout-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
              </figure>
-         <li><button class="support-AG"> <a href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button> to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. Click the button to donate. </li>
-         <li><button class="support-AG"> <a href="https://www.asiangardenboston.com/">Share</a> </button> the word. Click the button share this website on your social media. </li>
-         <li><button class="support-AG"> <a href="eastboston.html"> Learn </a> </a> </button> more about other local minority businesses. Read about El Pleon, a Latinx restaurant in East Boston. </li>
+         <li>Donate to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. </li>
+         <button class="support-AG"> <a class="support-button" href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button>
+         <li>Share this website on your social media. </li>
+         <button class="support-AG"> <a class="support-button" href="https://www.asiangardenboston.com/">Share</a> </button>  
+         <li>Learn more about other local minority businesses. Read about El Penol, a Latinx restaurant in East Boston. </li>
+         <button class="support-AG"> <a class="support-button" href="eastboston.html"> El Penol </a> </a> </button> 
      </ul>
     </div>
     <div class="foo-ag blue"> </div>
