change to address

--- a/chinatown.html
+++ b/chinatown.html
@@ -21,7 +21,7 @@
             <h1>Asian Garden Restaurant</h1>
         </div>
         <div class="address">
-            <h1>28 Harrison Ave, Boston, MA 02111-2025</h1>
+            <h1>28 Harrison Ave. Boston, MA 02111-2025</h1>
             <figure>
                 <img class="eb-restaurant-image" src="assets/asian garden full rest..png" alt="outside of the restaurant, showing neon open sign"> 
                 <figcaption class="eb-rest-image-caption"> the front of the store</figcaption>
