--- a/eastboston.html
+++ b/eastboston.html
@@ -21,7 +21,7 @@
             <h1>El Penol Restaurant</h1>
         </div>
         <div class="address">
-            <h1>54 Bennington Street Boston, Massachusetts,  02128</h1>
+            <h1>54 Bennington Street Boston, Massachusetts  02128</h1>
             <figure>
                 <img class="restaurant-image" src="assets/el penol restaurant.png"> 
                 <figcaption class="rest-image-caption"> the front of the store</figcaption>
